# barco-assignment

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Colour_Space_Transformation.h  Tint_Transformation.h  cuda_transformations.cuh  cuda_utils.cuh  cxxopts.hpp  version.h  version.h.in
src/: Colour_Space_Transformation.cpp  Tint_Transformation.cpp  cuda_transformations.cu  cuda_utils.cu
